image works now

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
                     </div>
 
             </nav>
-            <div><img src='..Resources\InsidePanethon.jpg' alt="InsidePanethon"></div>
+            <img src="static/image/InsidePanethon.jpg" alt="InsidePanethon" width="400" height="400">
         </div>
 
 
