added units to table

--- a/templates/table.html
+++ b/templates/table.html
@@ -114,15 +114,15 @@
                             <table id="cement-table" class="table table-striped">
                                 <thead>
                                     <tr>
-                                        <th class="table-head">Cement</th>
-                                        <th class="table-head">Blast Furnace Slage</th>
-                                        <th class="table-head">Fly Ash</th>
-                                        <th class="table-head">Water</th>
-                                        <th class="table-head">Superplasticizer</th>
-                                        <th class="table-head">Coarse Aggregate</th>
-                                        <th class="table-head">Fine Aggregate</th>
-                                        <th class="table-head">Age</th>
-                                        <th class="table-head">Compressive Strength</th>
+                                        <th class="table-head">Cement (kg)</th>
+                                        <th class="table-head">Blast Furnace Slage (kg)</th>
+                                        <th class="table-head">Fly Ash (kg)</th>
+                                        <th class="table-head">Water (kg)</th>
+                                        <th class="table-head">Superplasticizer (kg)</th>
+                                        <th class="table-head">Coarse Aggregate (kg)</th>
+                                        <th class="table-head">Fine Aggregate (kg)</th>
+                                        <th class="table-head">Age (days)</th>
+                                        <th class="table-head">Compressive Strength (MPa)</th>
                                     </tr>
                                 </thead>
                                 <tbody></tbody>
