created round image and moved to right of page

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
                     </div>
 
             </nav>
-            <img src="static/image/InsidePanethon.jpg" alt="InsidePanethon" width="400" height="400">
+            <img src="static/image/InsidePanethon.jpg" alt="InsidePanethon" width="400" height="400" style="float:right;box-shadow: 10px 10px 5px black;border-radius:25px;">
         </div>
 
 
