current state of code

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,11 +34,9 @@
                 <div class="navbar-nav">
                     <div class="navbar-nav">
                         <a class="nav-item nav-link active" href="/" target="_self"
-                            style="font-size:30px;padding:10px">Home</a>
-                        <a class="nav-item nav-link" href="/table" target="_self"
-                            style="font-size:30px;padding:10px">Table</a>
-                        <a class="nav-item nav-link" href="/graph" target="_self"
-                            style="font-size:30px;padding:10px">Graphs</a>
+                        style="font-size:30px;padding:10px">Home</a>
+                    <a class="nav-item nav-link" href="/table" target="_self"
+                        style="font-size:30px;padding:10px">Data Analysis</a>
                     </div>
 
             </nav>
