added some content to the home page as well as prettier content on the analysis page. also added herokuitems

--- a/templates/table.html
+++ b/templates/table.html
@@ -14,6 +14,9 @@
 
     <!--jQuery CDN-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    
+
+
 </head>
 
 <body>
@@ -42,7 +45,7 @@
                 <h1>Concrete Compressive Strength</h1>
                 <p>How strong is your concrete?</p>
             </div>
-            <div class="row margin-top-50">
+            <div class="row margin-top-50" style="box-shadow: 5px 5px 5px black;border-radius:10px;background-color: firebrick;">
                 <div class="col-md-12">
                     <aside class="filters">
                         <div class="panel panel-default">
@@ -115,17 +118,17 @@
                     </aside>
                 </div>
                 <div class="row">
-                    <div class="col-md-6" style="margin-left: 25px;margin-right: 5px">
+                    <div class="col-md-6" style="margin-left: 25px;margin-right: 5px;box-shadow: 5px 5px 5px black;border-radius:10px;">
                         <div id="bar"></div>
                     </div>
-                    <div class="col-md-5" style="margin-right: 5px;margin-left: 5px;">
+                    <div class="col-md-5" style="margin-right: 5px;margin-left: 5px;box-shadow: 5px 5px 5px black;border-radius:10px;">
                         <div id="line"></div>
                     </div>
                 </div>
                 <div class="row" style="margin: 10px;">
                     <div class="col-md-12">
                         <div id="table-area" class="">
-                            <table id="cement-table" class="table table-striped">
+                            <table id="cement-table" class="table table-striped"style="box-shadow: 10px 10px 5px black;border-radius:10px;">
                                 <thead>
                                     <tr>
                                         <th class="table-head">Cement (kg)</th>
