--- a/templates/index.html
+++ b/templates/index.html
@@ -8,18 +8,74 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <!-- Our CSS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
     <!-- d3 JavaScript -->
     <script src="https://d3js.org/d3.v6.min.js"></script>
 
     <!--jQuery CDN-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script>
+        function magnify(imgID, zoom) {
+            var img, glass, w, h, bw;
+            img = document.getElementById(imgID);
+            /*create magnifier glass:*/
+            glass = document.createElement("DIV");
+            glass.setAttribute("class", "img-magnifier-glass");
+            /*insert magnifier glass:*/
+            img.parentElement.insertBefore(glass, img);
+            /*set background properties for the magnifier glass:*/
+            glass.style.backgroundImage = "url('" + img.src + "')";
+            glass.style.backgroundRepeat = "no-repeat";
+            glass.style.backgroundSize = (img.width * zoom) + "px " + (img.height * zoom) + "px";
+            bw = 3;
+            w = glass.offsetWidth / 2;
+            h = glass.offsetHeight / 2;
+            /*execute a function when someone moves the magnifier glass over the image:*/
+            glass.addEventListener("mousemove", moveMagnifier);
+            img.addEventListener("mousemove", moveMagnifier);
+            /*and also for touch screens:*/
+            glass.addEventListener("touchmove", moveMagnifier);
+            img.addEventListener("touchmove", moveMagnifier);
+            function moveMagnifier(e) {
+                var pos, x, y;
+                /*prevent any other actions that may occur when moving over the image*/
+                e.preventDefault();
+                /*get the cursor's x and y positions:*/
+                pos = getCursorPos(e);
+                x = pos.x;
+                y = pos.y;
+                /*prevent the magnifier glass from being positioned outside the image:*/
+                if (x > img.width - (w / zoom)) { x = img.width - (w / zoom); }
+                if (x < w / zoom) { x = w / zoom; }
+                if (y > img.height - (h / zoom)) { y = img.height - (h / zoom); }
+                if (y < h / zoom) { y = h / zoom; }
+                /*set the position of the magnifier glass:*/
+                glass.style.left = (x - w) + "px";
+                glass.style.top = (y - h) + "px";
+                /*display what the magnifier glass "sees":*/
+                glass.style.backgroundPosition = "-" + ((x * zoom) - w + bw) + "px -" + ((y * zoom) - h + bw) + "px";
+            }
+            function getCursorPos(e) {
+                var a, x = 0, y = 0;
+                e = e || window.event;
+                /*get the x and y positions of the image:*/
+                a = img.getBoundingClientRect();
+                /*calculate the cursor's x and y coordinates, relative to the image:*/
+                x = e.pageX - a.left;
+                y = e.pageY - a.top;
+                /*consider any page scrolling:*/
+                x = x - window.pageXOffset;
+                y = y - window.pageYOffset;
+                return { x: x, y: y };
+            }
+        }
+    </script>
 </head>
 
 <body>
     <div class="wrapper">
         <nav class="navbar navbar-default">
-            <div class="container-fluid">
+            <div class="container">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="index.html">
 
@@ -34,16 +90,43 @@
                 <div class="navbar-nav">
                     <div class="navbar-nav">
                         <a class="nav-item nav-link active" href="/" target="_self"
-                        style="font-size:30px;padding:10px">Home</a>
-                    <a class="nav-item nav-link" href="/table" target="_self"
-                        style="font-size:30px;padding:10px">Data Analysis</a>
+                            style="font-size:30px;padding:10px">Home</a>
+                        <a class="nav-item nav-link" href="/table" target="_self"
+                            style="font-size:30px;padding:10px">Data Analysis</a>
                     </div>
 
             </nav>
-            <img src="static/image/InsidePanethon.jpg" alt="InsidePanethon" width="400" height="400" style="float:right;box-shadow: 10px 10px 5px black;border-radius:25px;">
+            <img src="static/image/InsidePanethon.jpg" alt="InsidePanethon" width="400" height="400"
+                style="float:right;box-shadow: 10px 10px 5px black;border-radius:25px;">
         </div>
+        <div class="container">
+            <div class="row" style="margin-top: 25px;">
+                <div class='col-lg-5 img-magnifier-container'
+                    style="box-shadow: 10px 10px 5px black;border-radius:25px;background-color:red;width:400px;float:right;color:white;text-align:center;margin-top: 10px;">
+                    <caption style="caption-side:top;">Scatter Matrix Plot</caption>
+                    <img id="myimage" src="static\image\scatter_matrix_sm.png"
+                        alt="scatter_matrix_plot" width="400px"></div>
+                <div class='col-lg-3'
+                    style="text-align: center;box-shadow: 5px 5px 5px black;border-radius:10px;float:right;margin-right: 100px;width:210px;margin-top:20px;">
+                    {{rfr_stats_table|safe}}
+
+                    {{best_params_table|safe}}
+
+                    {{best_features_table|safe}}
 
 
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+
+    <script>
+        /* Initiate Magnify Function
+        with the id of the image, and the strength of the magnifier glass:*/
+        magnify("myimage", 2);
+        magnify("myimage2",3)
+        </script>
 </body>
 
 </html>
