--- a/templates/table.html
+++ b/templates/table.html
@@ -42,7 +42,7 @@
                 </div>
             </nav>
             <div class="hero text-center">
-                <h1>Concrete Compressive Strength</h1>
+                <h3>Concrete Compressive Strength</h3>
                 <p>How strong is your concrete?</p>
             </div>
             <div class="row margin-top-50" style="box-shadow: 5px 5px 5px black;border-radius:10px;background-color: firebrick;">
@@ -54,12 +54,12 @@
                             <div class="row">
                                 <div class="col-md-6" style="text-align: center;margin-top: 10px;">
                                     <div>
-                                        <input id="clear-btn" type="submit" value="Reset">
+                                        <input id="clear-btn" type="submit" value="Reset" style="background-color: red;color:white;">
                                     </div>
                                 </div>
                                 <div>
                                     <div class="col-md-6" style="text-align: center;margin-top: 10px;">
-                                        <input id="predict-btn" type="submit" value="Predict">
+                                        <input id="predict-btn" type="submit" value="Predict" style="background-color: green; color:white;">
                                     </div>
                                 </div>
                             </div>
