adjustments for small screens

--- a/templates/table.html
+++ b/templates/table.html
@@ -37,7 +37,7 @@
                 <div class="navbar-nav">
                     <a class="nav-item nav-link active" href="/" target="_self"
                         style="font-size:30px;padding:10px">Home</a>
-                    <a class="nav-item nav-link" href="/table" target="_self" style="font-size:30px;padding:10px">Data
+                    <a class="nav-item nav-link" href="/table" target="_self" style="font-size:30px;padding:10px;">Data
                         Analysis</a>
                 </div>
             </nav>
@@ -52,13 +52,13 @@
                             <div class="panel-heading" style="text-align: center;">Predict the Strength of Your Concrete
                             </div>
                             <div class="row">
-                                <div class="col-md-6" style="text-align: center;margin-top: 10px;">
+                                <div class="col-md-6 col-sm-6" style="text-align: center;margin-top: 10px;">
                                     <div>
                                         <input id="clear-btn" type="submit" value="Reset" style="background-color: red;color:white;">
                                     </div>
                                 </div>
                                 <div>
-                                    <div class="col-md-6" style="text-align: center;margin-top: 10px;">
+                                    <div class="col-md-6 col-sm-6" style="text-align: center;margin-top: 10px;">
                                         <input id="predict-btn" type="submit" value="Predict" style="background-color: green; color:white;">
                                     </div>
                                 </div>
@@ -118,11 +118,11 @@
                     </aside>
                 </div>
                 <div class="row">
-                    <div class="col-md-6" style="margin-left: 25px;margin-right: 5px;box-shadow: 5px 5px 5px black;border-radius:10px;">
-                        <div id="bar"></div>
+                    <div class="col-lg-6 col-md-5 col-sm-12" >
+                        <div id="bar" style="margin: 15px;box-shadow: 10px 10px 5px black;"></div>
                     </div>
-                    <div class="col-md-5" style="margin-right: 5px;margin-left: 5px;box-shadow: 5px 5px 5px black;border-radius:10px;">
-                        <div id="line"></div>
+                    <div class="col-lg-6 col-md-5 col-sm-12">
+                        <div id="line" style="margin: 15px;box-shadow: 10px 10px 5px black;"></div>
                     </div>
                 </div>
                 <div class="row" style="margin: 10px;">
