pineapples, orange, strawberry

--- a/templates/index.html
+++ b/templates/index.html
@@ -105,14 +105,15 @@
                         <p>Concrete is used more than any other material in the world.
 
                         </p>
-                        <p>After around four weeks, concrete has reached 90% of its final strength.<br> However, it
-                            continues
-                            to strengthen for decades afterwards. <br>Some bacteria also help to strengthen
-                            concrete!<br>
+                        <p>After around four weeks, concrete has reached 90% of its final strength.</p> 
+                        <p>However, it continues to strengthen for decades afterwards.</p>
+                        <p>Some bacteria also help to strengthen
+                            concrete!
                         </p>
+                        <p>Aggregates make up 60 to 80 percent of concrete volume and between 75 to 80 percent of its weight.</p>
                     </a>
                 </div>
-                <div class="col-md-4" style="text-align: right;margin-top: 10px;width: 250px;">
+                <div class="col-md-4" style="text-align: right;margin-top: 10px;margin-left:75px;width: 250px;">
                     <p> The Pantheon is a massive concrete building built in Rome in the 2nd century AD. For
                         nearly
                         2,000 years the Pantheon has stood, weathering earthquakes, Barbarian invasions and the
@@ -129,9 +130,9 @@
                         </p>
                     </div>
                 </div> -->
-                <div class="col-md-4">
-                    <div>
-                        <figure>
+                <div class="col-md-4" style="float:right;margin-right: 65px;">
+                    <div >
+                        <figure >
 
                             <a href="https://www.smithsonianmag.com/smart-news/scientific-reason-why-pantheon-hasnt-crumbled-180953627/"
                                 target="_blank">
@@ -157,12 +158,13 @@
                 <div class="col-md-12" style="margin:10px;box-shadow: 5px 5px 5px black;border-radius:5px;">
                     <h4>Data analysis was done using the Python programming language and its libraries: scikit_learn,
                         pandas, keras, numpy, and matplotlib.
-                        From the Figure 1.1, we can see that the most important component contributing to the
-                        compressive strength of concrete is water, cement, and age.
+                        From the Figure 1.1, we can see that the most important components contributing to the
+                        compressive strength of concrete are water, cement, and age.
                         We were able to achieve an accuracy score of 89% with a mean squared error (MSE) of 27.9 and
-                        mean absolute error (MAE) of 3.44. These are the best results when
-                        predicting the compressive strength of concrete using a Random Forest Regression (RFR) Machine
-                        Learning Model compare to other models tested, such as: Artifical Neural Network (ANN),
+                        mean absolute error (MAE) of 3.44. With the Random Forest Regression (RFR) model, we were able to achieve 
+                        our highest accuracy score of 89% with a mean squared error (MSE) of 27.9 and mean absolute error 
+                        (MAE) of 3.44. These are the best results when predicting the compressive strength of concrete compared 
+                        to various other models tested, such as: Artifical Neural Network (ANN),
                         Linear Regression + Polynomial Features (LR+PF), Support Vector Regression (SVR). The SVR model
                         yielded an accuracy of 56%, LR+PF with 84%, and ANN with a MSE of 39.3 and a MAE of 4.98.
                         The best parameters for our RFR model were determined using GridSearchCV library function that is
